--- a/Raiz.css
+++ b/Raiz.css
@@ -37,16 +37,14 @@ a {
 .interno {
     color: white;
 }
-
-header {
+header{
+    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.594);
+}
+.shadow-top {
+    position: relative;
     height: 350px;
     width: 100%;
     overflow: hidden;
-    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.594);
-}
-
-.shadow-top {
-    position: relative;
 }
 
 .carrosel {
@@ -148,6 +146,7 @@ header {
     justify-content: flex-start;
     align-items: center;
     box-shadow: 0 3px 5px rgba(0, 0, 0, 0.485);
+
 }
 
 .hotbar ul {
@@ -155,6 +154,7 @@ header {
 }
 
 .hotbar a {
+    color: white;
     transition: all 333ms;
 }
 
@@ -166,7 +166,7 @@ header {
 
 .content {
     min-width: none;
-    max-width: 1440px;
+    max-width: 1500px;
     margin: 80px auto;
 }
 
@@ -179,7 +179,7 @@ header {
     justify-content: flex-start;
     align-items: center;
     margin-bottom: 80px;
-
+    border: 5px solid #772525;
 }
 .flair{
     width: 350px;
@@ -193,6 +193,9 @@ header {
     font-size: 1.3em;
     font-weight: 400;
     font-family: var(--corpo);
+}
+.flair h2 {
+    text-transform: uppercase;
 }
 .cartaz{
     height: 75%;
@@ -242,7 +245,12 @@ header {
         font-size: 1.5em;
     }
 }
+@media (max-width: 800px) {
+    .banner{
+        justify-content: center;
+    }
 
+}
 
 .volume {
     color: white;
