--- a/leaf.css
+++ b/leaf.css
@@ -8,9 +8,44 @@
     --corpo: 'Oswald', sans-serif;
 }
 
+
+.cardapio-topo{
+    height: 160px;
+    display: flex;
+    background-color: var(--vermelho);
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+    flex-wrap: nowrap;
+    align-items: center;
+}
+/*----------------------------------*/
+
+.descricao{
+    background-image: url(https://conteudo.imguol.com.br/c/entretenimento/8c/2018/04/18/fast-food-lanche-1524056858988_v2_450x450.jpg);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+    border-radius: 15px;
+    display: none;
+}
+.sombra{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    background-color: #0000005b;
+    border-radius: 15px;
+}
+
 .top-div{
     width: 100%;
-    height: 75%
+    height: 70%;
+
 }
 .top-div img{
     width: 100%;
@@ -24,4 +59,48 @@
     justify-content: space-evenly;
     align-items: center;
     margin: 10px;
+}
+
+.info{
+    background-color: var(--amarelo);
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-transform: uppercase;
+    border-radius: 50%;
+    box-shadow: inset -1px -1px 1px rgba(0, 0, 0, 0.679);
+    transition: 222ms;
+    cursor: pointer;
+    font-weight: 900;
+}
+.info:active{
+    box-shadow: inset 1px 1px 1px rgba(0, 0, 0, 0.679);
+}
+.controle{
+    display: flex;
+    width: 100%;
+    height: 30%;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: space-around;
+    align-items: center;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+.botoes{
+    display: flex;
+    width: 30%;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: space-around;
+    align-items: center;
+}
+.texto{
+    width: 70%;
+    padding: 5px;
 }
